OnboardingV2Minimal/force-app/main/default/objects/Communication_Event_Policy__mdt/Communication_Event_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Communication Event Policy</label>
    <pluralLabel>Communication Event Policies</pluralLabel>
</CustomObject>