OnboardingV2Minimal/force-app/main/default/objects/Communication_Event_Policy__mdt/fields/Dispatch_Order__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Order__c</fullName>
    <label>Dispatch Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>