OnboardingV2Minimal/force-app/main/default/objects/Communication_Event_Policy__mdt/fields/Event_Key__c.field-meta.xml
<CustomField>
    <fullName>Event_Key__c</fullName>
    <label>Event Key</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OnboardingCreated</fullName>
                <label>Onboarding Created</label>
            </value>
            <value>
                <fullName>LearnUponTriggered</fullName>
                <label>LearnUpon Triggered</label>
            </value>
            <value>
                <fullName>SetupComplete</fullName>
                <label>Setup Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>